--- a/.gitignore
+++ b/.gitignore
@@ -47,12 +47,17 @@ local.properties
 target/
 **/*.mflow
 
-# --------------- #
+# ------------- #
 # Mule-specific #
-# --------------- #
+# ------------- #
 .mule/
 
 # --------------------------------------- #
 # Test credentials to be use locally only #
 # --------------------------------------- #
 src/test/resources/mule.test.properties
+
+# ------------- #
+# SAP libraries #
+# ------------- #
+src/main/app/lib
