--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -9,17 +10,17 @@
 		<version>1.0.2</version>
 	</parent>
 
-	<artifactId>template-sap2sfdc-account-broadcast</artifactId>
+	<artifactId>template-sap2sfdc-customer-broadcast</artifactId>
 	<packaging>mule</packaging>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>template-sap2sfdc-account-broadcast Anypoint Template Project</name>
+	<name>template-sap2sfdc-customer-broadcast Anypoint Template Project</name>
 
 	<properties>
 		<sfdc.version>5.4.7</sfdc.version>
 		<sap.transport.version>2.2.2</sap.transport.version>
 		<sap.jco.version>3.0.9</sap.jco.version>
 		<sap.idoc.version>3.0.6</sap.idoc.version>
-		<sap.build.type>linux64</sap.build.type>
+		<sap.build.type>mac64</sap.build.type>
 	</properties>
 
 	<build>
@@ -33,8 +34,8 @@
 					</inclusions>
 				</configuration>
 			</plugin>
-		
-			
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -72,8 +73,10 @@
 						<phase>package</phase>
 						<configuration>
 							<tasks>
-								<zip destfile="${project.build.directory}/${project.build.finalName}.zip" update="true">
-									<zipfileset dir="${project.build.directory}/temp-native-lib" prefix="lib" />
+								<zip destfile="${project.build.directory}/${project.build.finalName}.zip"
+									update="true">
+									<zipfileset dir="${project.build.directory}/temp-native-lib"
+										prefix="lib" />
 								</zip>
 							</tasks>
 						</configuration>
@@ -87,7 +90,7 @@
 	</build>
 
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-module-sfdc</artifactId>
@@ -98,8 +101,8 @@
 			<artifactId>mule-transport-sap</artifactId>
 			<version>${sap.version}</version>
 		</dependency>
-		
-		
+
+
 		<dependency>
 			<groupId>com.sap.conn.jco</groupId>
 			<artifactId>sapjco</artifactId>
@@ -119,7 +122,7 @@
 			<version>${sap.idoc.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.mulesoft.muleesb.modules</groupId>
 			<artifactId>mule-module-batch-ee</artifactId>
@@ -148,8 +151,8 @@
 		</repository>
 	</repositories>
 	<scm>
-		<connection>scm:git:https://github.com/mulesoft/template-sap2sfdc-account-broadcast.git</connection>
-		<developerConnection>scm:git:https://github.com/mulesoft/template-sap2sfdc-account-broadcast.git</developerConnection>
-		<url>http://github.com/mulesoft/template-sap2sfdc-account-broadcast</url>
+		<connection>scm:git:https://github.com/mulesoft/template-sap2sfdc-customer-broadcast.git</connection>
+		<developerConnection>scm:git:https://github.com/mulesoft/template-sap2sfdc-customer-broadcast.git</developerConnection>
+		<url>http://github.com/mulesoft/template-sap2sfdc-customer-broadcast</url>
 	</scm>
 </project>
