--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.mule.templates</groupId>
 		<artifactId>templates-tooling-parent-pom</artifactId>
-		<version>1.0.2</version>
+		<version>1.0.8</version>
 	</parent>
 
 	<artifactId>template-sap2sfdc-customer-broadcast</artifactId>
@@ -16,8 +16,8 @@
 	<name>template-sap2sfdc-customer-broadcast Anypoint Template Project</name>
 
 	<properties>
-		<sap.jco.version>3.0.9</sap.jco.version>
-		<sap.idoc.version>3.0.6</sap.idoc.version>
+		<sap.jco.version>3.0.10</sap.jco.version>
+		<sap.idoc.version>3.0.10</sap.idoc.version>
 		<sap.build.type>mac64</sap.build.type>
 	</properties>
 
@@ -103,7 +103,7 @@
 		<!-- SAP Dependencies -->
 		<dependency>
 			<groupId>com.sap.conn.jco</groupId>
-			<artifactId>sapjco</artifactId>
+			<artifactId>sapjco3</artifactId>
 			<version>${sap.jco.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -116,7 +116,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.sap.conn.idoc</groupId>
-			<artifactId>sapidoc</artifactId>
+			<artifactId>sapidoc3</artifactId>
 			<version>${sap.idoc.version}</version>
 			<scope>test</scope>
 		</dependency>
@@ -144,6 +144,12 @@
 			<id>mule-ee-releases</id>
 			<name>MuleEE Releases Repository</name>
 			<url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-releases/</url>
+		</repository>
+		<repository>
+			<id>mule-ee-thirdparty</id>
+			<name>MuleSoft Thirdparty Repository</name>
+			<url>https://repository.mulesoft.org/nexus/content/repositories/thirdparty/</url>
+			<layout>default</layout>
 		</repository>
 	</repositories>
 	<scm>
