--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -12,7 +11,7 @@
 
 	<artifactId>template-sap2sfdc-customer-broadcast</artifactId>
 	<packaging>mule</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>template-sap2sfdc-customer-broadcast Anypoint Template Project</name>
 
 	<properties>
@@ -71,10 +70,8 @@
 						<phase>package</phase>
 						<configuration>
 							<tasks>
-								<zip destfile="${project.build.directory}/${project.build.finalName}.zip"
-									update="true">
-									<zipfileset dir="${project.build.directory}/temp-native-lib"
-										prefix="lib" />
+								<zip destfile="${project.build.directory}/${project.build.finalName}.zip" update="true">
+									<zipfileset dir="${project.build.directory}/temp-native-lib" prefix="lib" />
 								</zip>
 							</tasks>
 						</configuration>
@@ -146,5 +143,6 @@
 		<connection>scm:git:https://github.com/mulesoft/template-sap2sfdc-customer-broadcast.git</connection>
 		<developerConnection>scm:git:https://github.com/mulesoft/template-sap2sfdc-customer-broadcast.git</developerConnection>
 		<url>http://github.com/mulesoft/template-sap2sfdc-customer-broadcast</url>
-	</scm>
+	  <tag>v1.0.0</tag>
+  </scm>
 </project>
