--- a/src/main/resources/mule.prod.properties
+++ b/src/main/resources/mule.prod.properties
@@ -1,4 +1,4 @@
-# Properties to be used on the production environment
+# Properties to be used on the Production environment
 
 #SAP Connector configuration
 sap.jco.ashost=
