--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<artifactId>template-sap2sfdc-customer-broadcast</artifactId>
 	<packaging>mule</packaging>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<name>template-sap2sfdc-customer-broadcast Anypoint Template Project</name>
 
 	<properties>
@@ -143,6 +143,6 @@
 		<connection>scm:git:https://github.com/mulesoft/template-sap2sfdc-customer-broadcast.git</connection>
 		<developerConnection>scm:git:https://github.com/mulesoft/template-sap2sfdc-customer-broadcast.git</developerConnection>
 		<url>http://github.com/mulesoft/template-sap2sfdc-customer-broadcast</url>
-	  <tag>HEAD</tag>
+	  <tag>v1.1.0</tag>
   </scm>
 </project>
