--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>template-sap2sfdc-customer-broadcast</artifactId>
-    <version>2.1.2</version>
+    <version>2.1.3-SNAPSHOT</version>
     <packaging>mule-application</packaging>
     <name>template-sap2sfdc-customer-broadcast</name>
 
@@ -98,4 +98,4 @@
             <layout>default</layout>
         </repository>
     </repositories>
-<scm><connection>scm:git:git@github.com:mulesoft/template-sap2sfdc-customer-broadcast.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-sap2sfdc-customer-broadcast.git</developerConnection><url>https://github.com/mulesoft/template-sap2sfdc-customer-broadcast</url><tag>v2.1.2</tag></scm></project>
+<scm><connection>scm:git:git@github.com:mulesoft/template-sap2sfdc-customer-broadcast.git</connection><developerConnection>scm:git:git@github.com:mulesoft/template-sap2sfdc-customer-broadcast.git</developerConnection><url>https://github.com/mulesoft/template-sap2sfdc-customer-broadcast</url><tag>HEAD</tag></scm></project>
